--- a/css/stylesMob.css
+++ b/css/stylesMob.css
@@ -2,11 +2,18 @@
   body {
     /* background: green; */
     margin-bottom: -7px;
+    font-family: "Roboto", sans-serif;
   }
   h2 {
     margin-top: 0px;
     text-align: center;
     padding: 15px 15px 0px;
+  }
+  a {
+    text-decoration: none;
+  }
+  a:visited {
+    color: black;
   }
   .header-card {
     background: rgb(243, 243, 243);
@@ -23,13 +30,14 @@
     display: block;
     background: white;
     text-align: center;
-    margin: 2px 10px;
+    margin: 5px 10px;
     padding: 5px 0 5px 0;
   }
   .bio-text {
     width: 90%;
     margin-left: 5%;
     text-align: justify;
+    padding-bottom: 12%;
   }
   .portfolio-heading {
     font-weight: bolder;
@@ -78,8 +86,21 @@
     font-weight: bold;
     margin-left: 7px;
   }
+  hr {
+    width: 92%;
+  }
   #footer p {
     display: inline-block;
-    /* justify-content: end; */
+  }
+  #student-name {
+    margin-left: 5%;
+    font-weight: bolder;
+  }
+  #back-to-top {
+    margin-left: 27%;
+    font-weight: bolder;
+  }
+  #bottom-menu {
+    display: none;
   }
 }
