--- a/css/stylesMob.css
+++ b/css/stylesMob.css
@@ -1,4 +1,4 @@
-@media (max-width: 320px) {
+@media (min-width: 320px) and (max-width: 767px) {
   body {
     /* background: green; */
     margin-bottom: -7px;
