--- a/css/stylesBig.css
+++ b/css/stylesBig.css
@@ -14,6 +14,7 @@
   }
   a {
     text-decoration: none;
+    color: black;
   }
   a:visited {
     color: black;
@@ -23,26 +24,18 @@
     padding-bottom: 30px;
     padding-right: 20px;
     padding-left: 20px;
+    padding-top: 28px;
     margin-left: 0%;
     margin-right: -8px;
   }
-  .bio-text-pic {
-    /* display: inline; */
-    /* float: right; */
-  }
   .bio-text {
-    /* float: left; */
     text-align: justify;
     width: 50%;
     margin-right: 10%;
-    /* display: inline-block; */
     float: left;
   }
   .profile-pic {
     width: 40%;
-    /* margin-right: 5%; */
-    /* float: right; */
-    /* display: inline; */
   }
   .header-card {
     background: rgb(243, 243, 243);
@@ -52,22 +45,23 @@
     margin-bottom: 30px;
   }
   #home-nav {
-    margin-left: 22%;
+    margin-left: 30%;
   }
   nav a {
     display: inline-block;
-    /* background: white; */
     text-align: center;
-    margin-right: 15%;
+    margin-right: 8%;
     padding-bottom: 2%;
     font-weight: bolder;
+  }
+  .big-nav {
+    display: inline;
   }
   .portfolio-heading {
     font-weight: bolder;
     text-align: center;
     padding: 30px;
     margin-bottom: -7px;
-    /* color: grey; */
   }
   .card-holder {
     display: flex;
@@ -76,7 +70,6 @@
     margin-right: -7px;
   }
   .bio-card {
-    /* background: red; */
     width: 33%;
   }
   .bio-card-image {
@@ -130,9 +123,6 @@
   #footer p,
   #footer div {
     display: inline;
-  }
-  #footer p {
-    /* display: inline-block; */
   }
   #bottom-menu {
     margin-right: 8%;
