--- a/css/stylesPad.css
+++ b/css/stylesPad.css
@@ -14,6 +14,7 @@
   }
   a {
     text-decoration: none;
+    color: black;
   }
   a:visited {
     color: black;
@@ -26,23 +27,14 @@
     margin-left: 0%;
     margin-right: -8px;
   }
-  .bio-text-pic {
-    /* display: inline; */
-    /* float: right; */
-  }
   .bio-text {
-    /* float: left; */
     text-align: justify;
     width: 50%;
     margin-right: 10%;
-    /* display: inline-block; */
     float: left;
   }
   .profile-pic {
     width: 40%;
-    /* margin-right: 5%; */
-    /* float: right; */
-    /* display: inline; */
   }
   .header-card {
     background: rgb(243, 243, 243);
@@ -56,7 +48,6 @@
   }
   nav a {
     display: inline-block;
-    /* background: white; */
     text-align: center;
     margin-right: 15%;
     padding-bottom: 2%;
@@ -67,7 +58,6 @@
     text-align: center;
     padding: 30px;
     margin-bottom: -7px;
-    /* color: grey; */
   }
   .card-holder {
     display: flex;
@@ -76,7 +66,6 @@
     margin-right: -7px;
   }
   .bio-card {
-    /* background: red; */
     width: 50%;
   }
   .bio-card-image {
@@ -130,9 +119,6 @@
   #footer p,
   #footer div {
     display: inline;
-  }
-  #footer p {
-    /* display: inline-block; */
   }
   #bottom-menu {
     margin-right: 8%;
